# cmake_ccm

./: .clang-format  .clangd  .gitignore  .tasks  CMakeLists.txt  CMakePresets.json  Makefile  build_ax615d.sh  build_t41.sh  build_x86.sh
cmake/: TargetFunc.cmake
src/demo/: CMakeLists.txt  main.c
toolchains/: ax615d_uclibc_gcc830.cmake  t41nq_uclibc_gcc720.cmake  x86_64_local.cmake
